--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "webpack --watch --mode development",
     "clean": "rm -rf ./dist/*",
     "lint": "eslint ./src",
-    "prepublish": "npm run clean && npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
