--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "clean-webpack-plugin": "^3.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
