--- a/package.json
+++ b/package.json
@@ -23,19 +23,27 @@
   "author": "Ian Rogers",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.4",
-    "clean-webpack-plugin": "^3.0.0",
-    "lodash": "^4.17.21"
+    "assert": "^2.0.0",
+    "axios": "^0.24.0",
+    "browserify-zlib": "^0.2.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tty-browserify": "0.0.1",
+    "util": "^0.12.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.16.5",
+    "babel-loader": "^8.2.3",
     "eslint": "^7.32.0",
     "husky": "^4.3.8",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "pretty-quick": "^2.0.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "husky": {
     "hooks": {
