--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "ajv": "^8.11.0"
+    "ajv": "^8.11.0",
+    "axios": "^0.27.2"
   },
   "name": "@kohost/api-client",
   "version": "1.0.0-alpha.2",
   "description": "API client for Kohost utils",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
