--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "dependencies": {
     "ajv": "^8.11.0",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "nanoid": "^3.3.4"
   },
   "name": "@kohost/api-client",
   "version": "1.0.0-alpha.2",
   "description": "API client for Kohost utils",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Ian Rogers",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^28.1.2",
+    "mongoose": "^6.4.1"
+  }
 }
