--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "axios": "^1.0.0",
+    "lodash.clonedeep": "^4.5.0",
     "nanoid": "^3.3.4"
   },
   "name": "@kohost/api-client",
