--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "ajv-formats": "^2.1.1",
     "axios": "^1.0.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.findlast": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
     "nanoid": "^3.3.4"
   },
   "name": "@kohost/api-client",
@@ -12,15 +14,18 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint ./",
+    "lint:fix": "eslint --fix ./"
   },
   "author": "Ian Rogers",
   "license": "ISC",
   "devDependencies": {
     "@kohost/eslint-config": "^1.0.0",
-    "jest": "^29.2.2",
     "eslint": "^8.6.0",
+    "eslint-plugin-jest": "^27.1.3",
     "husky": "^8.0.1",
+    "jest": "^29.2.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.5.1"
   },
