--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "dependencies": {
-    "ajv": "^8.11.0",
-    "ajv-formats": "^2.1.1",
-    "axios": "^1.0.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.findlast": "^4.6.0",
-    "lodash.sortby": "^4.7.0",
-    "nanoid": "^3.3.4"
-  },
   "name": "@kohost/api-client",
   "version": "1.0.0-alpha.3",
   "description": "API client for Kohost utils",
   "main": "index.js",
+  "module": "index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll",
@@ -29,6 +21,15 @@
     "jest": "^29.2.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
+    "axios": "^1.0.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.findlast": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
+    "nanoid": "^3.3.4"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
