--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kohost/api-client",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0-beta.0",
   "description": "API client for Kohost utils",
   "main": "index.js",
   "module": "index.js",
