--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-image: node:14
+image: node:16.17.1
 
 pipelines:
   pull-requests:
@@ -9,11 +9,6 @@ pipelines:
             - node
           script:
             - npm install
-            - npm version prerelease --preid=alpha -m "Upgrade to %s [skip ci]"
-            - git push && git push --tags
-            - pipe: atlassian/npm-publish:0.2.6
-              variables:
-                NPM_TOKEN: $NPM_TOKEN
   branches:
     master:
       - step:
@@ -22,7 +17,7 @@ pipelines:
             - node
           script:
             - npm install
-            - pipe: atlassian/npm-publish:0.2.6
+            - pipe: atlassian/npm-publish:0.3.2
               variables:
                 NPM_TOKEN: $NPM_TOKEN
     dev:
@@ -34,6 +29,21 @@ pipelines:
             - npm install
             - npm version prerelease --preid=beta -m "Upgrade to %s [skip ci]"
             - git push && git push --tags
-            - pipe: atlassian/npm-publish:0.2.6
+            - pipe: atlassian/npm-publish:0.3.2
               variables:
                 NPM_TOKEN: $NPM_TOKEN
+                EXTRA_ARGS: --tag next
+
+    v1:
+      - step:
+          name: Build and publish to NPM
+          caches:
+            - node
+          script:
+            - npm install
+            - npm version prerelease --preid=beta -m "Upgrade to %s [skip ci]"
+            - git push && git push --tags
+            - pipe: atlassian/npm-publish:0.3.2
+              variables:
+                NPM_TOKEN: $NPM_TOKEN
+                EXTRA_ARGS: --tag next-v1
