custom pipeline [skip ci]

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,13 +11,9 @@ pipelines:
           script:
             ## fetch use cases from s3
             - aws s3 cp s3://cloud-v3-data/useCases/useCases-${USE_CASE_HASH}.json ./useCases/http.json
-            - npm install
-            - npm version prerelease --preid=beta -m "Upgrade to %s [skip ci]"
-            - git push && git push --tags
-            - pipe: atlassian/npm-publish:0.3.2
-              variables:
-                NPM_TOKEN: $NPM_TOKEN
-                EXTRA_ARGS: --tag next-v1
+            ## commit the result
+            - git commit -am "Update use cases"
+            - git push
 
   pull-requests:
     "**":
