--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:fix": "eslint --fix ./",
     "prepare": "node prepare.js",
     "build": "node scripts/build.js",
+    "build:watch": "node scripts/build.js --watch",
     "clean": "rm -rf ./dist"
   },
   "files": [
