--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "3.0.0-beta.11",
   "description": "API client, models, schemas, commands, and events for Kohost applications",
   "author": "Ian Rogers",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kohost/api-client"
+  },
   "main": "dist/cjs/index.cjs.js",
   "module": "dist/esm/index.js",
   "exports": {
