minor device schema updates

--- a/.github/workflows/sync-use-cases.yml
+++ b/.github/workflows/sync-use-cases.yml
@@ -3,12 +3,8 @@
 name: Sync Use Cases
 
 on:
-  workflow_call:
-    inputs:
-      hash:
-        description: "The hash of the use cases to sync"
-        required: true
-        type: string
+  repository_dispatch:
+    types: [sync-use-cases]
 
 permissions:
   id-token: write
@@ -18,6 +14,9 @@ jobs:
   sync:
     name: Save use cases to http.json
     runs-on: ubuntu-latest
+    if: github.event.client_payload.hash
+    env:
+      HASH: ${{ github.event.client_payload.hash }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -32,16 +31,16 @@ jobs:
           aws-region: us-east-1
 
       - name: Download use cases
-        run: aws s3 cp s3://cloud-v3-data/useCases/useCases-${{ inputs.hash }}.json ./src/useCases/http.json
+        run: aws s3 cp s3://cloud-v3-data/useCases/useCases-${{ env.hash }}.json ./src/useCases/http.json
 
-      - run: git commit -am "Update use cases to hash ${{ inputs.hash }}"
+      - run: git commit -am "Update use cases to hash ${{ env.hash }}"
       - run: git push
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: "Update use cases to hash ${{ inputs.hash }}"
-          title: "[CI] Update use cases to hash ${{ inputs.hash }}"
-          body: "Update use cases to hash ${{ inputs.hash }}"
+          commit-message: "Update use cases to hash ${{ env.hash }}"
+          title: "[CI] Update use cases to hash ${{ env.hash }}"
+          body: "Update use cases to hash ${{ env.hash }}"
           branch: "use-cases"
           labels: "use-cases"
