--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -25,6 +25,11 @@ jobs:
           # npm token
           cache: "npm"
 
+      - name: Setup git config
+        run: |
+          git config --global user.email "<>"
+          git config --global user.name "GitHub Actions Bot"
+
       - run: npm ci
       - run: npm version ${{ github.event.release.tag_name }} -m "Upgrade to %s"
       - run: git push && git push --tags
