--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.findlast": "^4.6.0",
     "lodash.sortby": "^4.7.0",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "socket.io-client": "^4.6.1"
   },
   "browser": {
     "events": "events"
