--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -45,7 +45,8 @@ jobs:
       - run: npm run build
       # check if package.json version matches release tag
       - run: |
-          if [ $(jq -r .version package.json) != "${{ github.event.release.tag_name }}" ]; then
+          result="v$(jq -r .version package.json)"
+          if [ "$result" != "${{ github.event.release.tag_name }}" ]; then
             echo "package.json version does not match release tag"
             exit 1
           fi
