workflow git config

--- a/.github/workflows/sync-use-cases.yml
+++ b/.github/workflows/sync-use-cases.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Download use cases
         run: aws s3 cp s3://cloud-v3-data/useCases/useCases-${{ env.VERSION }}.json ./src/useCases/http.json
 
+      - run: git config user.email github-actions@github.com
+      - run: git config user.name github-actions
+      - run: git add src/useCases/http.json
       - run: git commit -am "Update use cases to API version ${{ env.VERSION }}"
       - run: git push
 
