--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "type": "git",
     "url": "https://github.com/kohost/api-client"
   },
-  "main": "dist/cjs/index.cjs.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.cjs.js"
-    },
-    "./*": {
-      "import": "./dist/esm/*.js",
-      "require": "./dist/cjs/*.js"
+    "./Models/*": {
+      "import": "./dist/esm/Models/*.js",
+      "types": "./dist/esm/Models/*.d.ts",
+      "require": "./dist/cjs/Models/*.js"
     }
   },
   "scripts": {
@@ -37,13 +34,16 @@
   ],
   "devDependencies": {
     "@kohost/eslint-config": "^1.0.0",
+    "dts-gen": "^0.6.1",
     "esbuild": "^0.18.12",
     "eslint": "^8.6.0",
     "eslint-plugin-jest": "^27.1.3",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
+    "json-schema-to-typescript": "^13.0.2",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "ajv": "^8.11.0",
