--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "types": "./dist/esm/index.d.ts",
+      "require": "./dist/cjs/index.js"
+    },
     "./Models/*": {
       "import": "./dist/esm/Models/*.js",
       "types": "./dist/esm/Models/*.d.ts",
