--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -43,6 +43,7 @@ jobs:
           registry-url: https://registry.npmjs.org
       - run: npm ci
       - run: npm run build
+      - run: npm run tsc
       # check if package.json version matches release tag
       - run: |
           result="v$(jq -r .version package.json)"
