--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll",
