--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "readme": "README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kohost/api-client"
+    "url": "git+https://github.com/kohost/api-client.git"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -35,7 +35,7 @@
     "eslint-plugin-jest": "^27.1.3",
     "husky": "^8.0.3",
     "jest": "^29.2.2",
-    "json-schema-to-typescript": "^13.0.2",
+    "json-schema-to-typescript": "^14.0.4",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "typescript": "^5.1.6"
