--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "README.md"
   ],
   "devDependencies": {
-    "@kohost/eslint-config": "^1.0.0",
+    "@eslint/js": "^9.7.0",
     "dts-gen": "^0.10.2",
-    "esbuild": "^0.20.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-jest": "^27.1.3",
-    "husky": "^8.0.3",
-    "jest": "^29.2.2",
+    "esbuild": "^0.23.0",
+    "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
     "json-schema-to-typescript": "^14.0.4",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
@@ -42,7 +41,7 @@
   },
   "dependencies": {
     "ajv": "^8.11.0",
-    "ajv-formats": "^2.1.1",
+    "ajv-formats": "^3.0.1",
     "amqplib": "^0.10.3",
     "axios": "^1.6.7",
     "debug": "^4.3.4",
