--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "lint": "eslint ./",
+    "lint": "eslint",
     "lint:fix": "eslint --fix ./",
     "prepare": "husky",
     "build": "node scripts/build.js",
