--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
     "allowJs": true,
+    "skipLibCheck": true,
     // Generate d.ts files
     "declaration": true,
     // This compiler run should
@@ -16,7 +17,6 @@
     "outDir": "dist/types",
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
-    "declarationMap": true,
-    "target": "ES2015"
+    "declarationMap": true
   }
 }
