--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "esbuild": "^0.24.2",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
+    "glob": "^11.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
