--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     "outDir": "dist/types",
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
-    "declarationMap": true
+    "declarationMap": true,
+    "module": "Preserve",
+    "moduleResolution": "bundler"
   }
 }
