--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "type": "git",
     "url": "git+https://github.com/kohost/api-client.git"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/node/cjs/index.js",
+  "module": "dist/node/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js"
+      "node": {
+        "import": "./dist/node/esm/index.js",
+        "require": "./dist/node/cjs/index.js"
+      },
+      "browser": {
+        "import": "./dist/browser/esm/index.js",
+        "require": "./dist/browser/cjs/index.js"
+      },
+      "default": {
+        "import": "./dist/node/esm/index.js",
+        "require": "./dist/node/cjs/index.js"
+      }
     }
   },
   "scripts": {
