--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     ".": {
       "node": {
         "import": "./dist/node/esm/index.js",
-        "require": "./dist/node/cjs/index.js"
+        "require": "./dist/node/cjs/index.js",
+        "types": "./dist/types/index.d.ts"
       },
       "browser": {
         "import": "./dist/browser/esm/index.js",
-        "require": "./dist/browser/cjs/index.js"
+        "require": "./dist/browser/cjs/index.js",
+        "types": "./dist/types/index.d.ts"
       },
       "default": {
         "import": "./dist/node/esm/index.js",
-        "require": "./dist/node/cjs/index.js"
+        "require": "./dist/node/cjs/index.js",
+        "types": "./dist/types/index.d.ts"
       }
     }
   },
@@ -34,7 +37,8 @@
     "build:watch": "node scripts/build.js --watch",
     "start": "node scripts/build.js --watch",
     "clean": "rm -rf ./dist",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "tsup": "tsup src/**/* --dts-only --cjsInterop --outDir dist/types"
   },
   "files": [
     "dist",
@@ -53,6 +57,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
+    "tsup": "^8.3.5",
     "typescript": "^5.1.6"
   },
   "dependencies": {
