--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "dist/types",
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "bundler"
   }
 }
