--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:fix": "eslint --fix ./",
     "prepare": "husky",
     "prebuild": "npm run generate-models",
-    "build": "tsup src/index.js --format esm,cjs --dts --outDir dist",
+    "build": "tsup",
     "generate-models": "node scripts/generate-source-models",
     "start": "node scripts/build.js --watch",
     "clean": "rm -rf ./dist",
