--- a/package.json
+++ b/package.json
@@ -9,29 +9,51 @@
     "url": "git+https://github.com/kohost/api-client.git"
   },
   "type": "module",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/index.d.cts",
   "exports": {
-    ".": {
-      "browser": {
-        "types": "./dist/index-browser.d.ts",
-        "import": "./dist/index-browser.js",
-        "require": "./dist/index-browser.cjs"
-      },
-      "node": {
-        "types": "./dist/index.d.ts",
-        "import": "./dist/index.js",
-        "require": "./dist/index.cjs"
-      },
-      "default": {
-        "types": "./dist/index-browser.d.ts",
-        "import": "./dist/index-browser.js",
-        "require": "./dist/index-browser.cjs"
-      }
+    "./models": {
+      "types": "./dist/models.d.ts",
+      "browser": "./dist/models.js",
+      "import": "./dist/models.js",
+      "require": "./dist/models.cjs"
+    },
+    "./useCases": {
+      "types": "./dist/useCases.d.ts",
+      "import": "./dist/useCases.js",
+      "require": "./dist/useCases.cjs"
+    },
+    "./errors": {
+      "types": "./dist/errors.d.ts",
+      "import": "./dist/errors.js",
+      "require": "./dist/errors.cjs"
+    },
+    "./commands": {
+      "types": "./dist/commands.d.ts",
+      "import": "./dist/commands.js",
+      "require": "./dist/commands.cjs"
+    },
+    "./events": {
+      "types": "./dist/events.d.ts",
+      "import": "./dist/events.js",
+      "require": "./dist/events.cjs"
+    },
+    "./client": {
+      "types": "./dist/client.d.ts",
+      "import": "./dist/client.js",
+      "require": "./dist/client.cjs"
+    },
+    "./socketIoClient": {
+      "types": "./dist/socketIoClient.d.ts",
+      "import": "./dist/socketIoClient.js",
+      "require": "./dist/socketIoClient.cjs"
     }
   },
-  "browser": {
-    "./dist/index.js": "./dist/index-browser.js",
-    "./dist/index.cjs": "./dist/index-browser.cjs"
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*"
+      ]
+    }
   },
   "scripts": {
     "test": "jest",
