--- a/package.json
+++ b/package.json
@@ -99,6 +99,9 @@
     "debug": "^4.3.4",
     "socket.io-client": "^4.6.1"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
+  },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{js,css,md,json}": "prettier --write"
