--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
+    "terser": "^5.37.0",
     "tsup": "^8.3.5",
     "typescript": "^5.1.6"
   },
